--- a/darkmoon-cli/.gitlab-ci.yml
+++ b/darkmoon-cli/.gitlab-ci.yml
@@ -35,7 +35,7 @@ workflow:
 
 stages:
   - quality
-  - test
+  # - test
 
 .quality-template: &quality
   <<: *install-deps
@@ -64,22 +64,21 @@ check-imports:
   <<: *quality
   script:
     - make check-imports
-
-# Testing Stage
-python3.10:
-  <<: *install-deps
-  image: python:3.10
-  stage: test
-  script: make test
-  coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
-  artifacts:
-    paths:
-      - darkmoon-cli/coverage.xml
-    reports:
-      coverage_report:
-        coverage_format: cobertura
-        path: coverage.xml
-    when: always
-    expire_in: 1 week
-  cache:
-    <<: *global-poetry-cache
+# Testing Stage   -- to be added
+# python3.10:
+#   <<: *install-deps
+#   image: python:3.10
+#   stage: test
+#   script: make test
+#   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
+#   artifacts:
+#     paths:
+#       - darkmoon-cli/coverage.xml
+#     reports:
+#       coverage_report:
+#         coverage_format: cobertura
+#         path: coverage.xml
+#     when: always
+#     expire_in: 1 week
+#   cache:
+#     <<: *global-poetry-cache
