--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,7 @@
 # Unauthorized copying of this file, via any medium is strictly prohibited.
 # All rights reserved. No warranty, explicit or implicit, provided.
 # Proprietary and confidential.
+#hello
 
 **/Dockerfile
 .venv
