--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,7 +40,11 @@ repos:
     hooks:
       - id: flake8
         args:
-          ["--max-line-length=88", "--max-doc-length=88", "--ignore=E203,W503"]
+          [
+            "--max-line-length=120",
+            "--max-doc-length=120",
+            "--ignore=E203,W503",
+          ]
 
   - repo: https://github.com/psf/black
     rev: 22.6.0
