--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
     "python.linting.enabled": true,
     "python.linting.pylintEnabled": false,
     "python.linting.flake8Enabled": true,
-    "python.linting.flake8Path": "darkmoon/.venv/bin/pflake8",
+    "python.linting.flake8Path": "darkmoon/.venv/bin/flake8",
     "python.linting.mypyEnabled": true,
     "python.linting.mypyPath": "darkmoon/.venv/bin/mypy",
     "python.linting.mypyArgs": [
