--- a/darkmoon-cli/pyproject.toml
+++ b/darkmoon-cli/pyproject.toml
@@ -20,13 +20,13 @@ python = "^3.10"
 python-dotenv = "^0.15.0"
 typer = {version = "^0.4.1", extras = ["all"]}
 types-requests = "^2.27.13"
+pefile = "^2022.5.30"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
 black = "^22.6.0"
 commitizen = "^2.20.4"
 flake8 = "^4.0.1"
-flake8-bandit = "^3.0.0"
 flake8-bugbear = "^22.3.20"
 flake8-commas = "^2.1.0"
 flake8-comprehensions = "^3.8.0"
