--- a/darkmoon-cli/pyproject.toml
+++ b/darkmoon-cli/pyproject.toml
@@ -20,13 +20,13 @@ python = "^3.10"
 python-dotenv = "^0.15.0"
 typer = {version = "^0.4.1", extras = ["all"]}
 types-requests = "^2.27.13"
+pefile = "^2022.5.30"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
 black = "^22.6.0"
 commitizen = "^2.20.4"
 flake8 = "^4.0.1"
-flake8-bandit = "^3.0.0"
 flake8-bugbear = "^22.3.20"
 flake8-commas = "^2.1.0"
 flake8-comprehensions = "^3.8.0"
@@ -41,7 +41,6 @@ mkdocs-minify-plugin = "^0.5.0"
 mkdocstrings = "^0.18.1"
 mypy = "^0.961"
 pre-commit = "^2.17.0"
-pyproject-flake8 = "^0.0.1-alpha.2"
 pytest = "^7.1.2"
 pytest-cov = "^2.11.1"
 pyupgrade = "^2.31.1"
@@ -114,22 +113,3 @@ exclude = '''
 include = '\.pyi?$'
 line-length = 120
 target-version = ['py38']
-
-[tool.flake8]
-docstring_style = "google"
-exclude = [".git", ".venv", "__pycache__", "build", "dist", "setup.py", "docs", "scripts"]
-extend-ignore = "E203,"
-extend-immutable-calls = [
-  "Depends",
-  "fastapi.params.Depends",
-  "Query",
-  "Body",
-  "Header",
-  "typer.Option",
-  "darkmoon.settings",
-  "settings",
-]
-ignore = ["B506", "D100", "D104", "S101", "W504", "W503", "D301"]
-max-complexity = 10
-max_line_length = 120
-strictness = "full"
