feat: added .env file and added user/pass authentication to database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
       - 27017:27017
     environment:
       - MONGO_INITDB_DATABASE=darkmoon
+      - MONGO_INITDB_ROOT_USERNAME=darkmoon
+      - MONGO_INITDB_ROOT_PASSWORD=password
+
     volumes:
       - mongodb:/data/db
       - mongodb_config:/data/configdb
