--- a/darkmoon-cli/pyproject.toml
+++ b/darkmoon-cli/pyproject.toml
@@ -45,6 +45,7 @@ pre-commit = "^2.17.0"
 pytest = "^7.1.2"
 pytest-cov = "^2.11.1"
 pyupgrade = "^2.31.1"
+pydantic = {extras = ["dotenv"], version = "^1.8.2"}
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
