--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,13 +17,6 @@ repos:
       - id: check-case-conflict
       - id: check-merge-conflict
 
-  - repo: https://github.com/pycqa/isort
-    rev: 5.10.1
-    hooks:
-      - id: isort
-        name: isort (python)
-        args: ["--profile", "black", "--check-only"]
-
   - repo: https://github.com/myint/autoflake
     rev: v1.4
     hooks:
@@ -48,11 +41,18 @@ repos:
           - flake8-docstrings
           - flake8-eradicate
 
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
+    hooks:
+      - id: isort
+        name: isort (python)
+        args: ["--profile", "black"]
+
   - repo: https://github.com/psf/black
     rev: 22.6.0
     hooks:
       - id: black
-        args: ["--check"]
+        args: ["--check", "-t", "py39"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.961
