feat: entries with same values are not added to list

--- a/darkmoon/pyproject.toml
+++ b/darkmoon/pyproject.toml
@@ -125,6 +125,7 @@ exclude = '''
 '''
 include = '\.pyi?$'
 line-length = 120
+target_versions = ['py310']
 
 [tool.flake8]
 docstring_style = "google"
