--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,7 +52,7 @@ repos:
     rev: 22.6.0
     hooks:
       - id: black
-        args: ["--check", "-t", "py39"]
+        args: ["-t", "py310"]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.961
