--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,10 @@
     ],
     "python.analysis.typeCheckingMode": "basic",
     "python.formatting.provider": "black",
+    "python.sortImports.args": [
+        "--profile",
+        "black"
+    ],
     "python.formatting.blackPath": "darkmoon/.venv/bin/black",
     "editor.formatOnSave": true,
     "[python]": {
