--- a/darkmoon-cli/pyproject.toml
+++ b/darkmoon-cli/pyproject.toml
@@ -22,6 +22,8 @@ typer = {version = "^0.4.1", extras = ["all"]}
 types-requests = "^2.27.13"
 pefile = "2022.5.30"
 future = "^0.18.2"
+python-magic = "^0.4.27"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
