--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -10,4 +10,4 @@ RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
     vim \
     tree \
-    make \
+    make
