--- a/darkmoon-cli/pyproject.toml
+++ b/darkmoon-cli/pyproject.toml
@@ -26,17 +26,8 @@ python-magic = "^0.4.27"
 requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
-autoflake = "^1.4"
 black = "^22.6.0"
 commitizen = "^2.20.4"
-flake8 = "^4.0.1"
-flake8-bugbear = "^22.3.20"
-flake8-commas = "^2.1.0"
-flake8-comprehensions = "^3.8.0"
-flake8-debugger = "^4.0.0"
-flake8-docstrings = "^1.6.0"
-flake8-eradicate = "^1.2.0"
-isort = "^5.10.1"
 mkdocs = "^1.2.3"
 mkdocs-awesome-pages-plugin = "^2.7.0"
 mkdocs-material = "^8.2.5"
@@ -48,6 +39,7 @@ pytest = "^7.1.2"
 pytest-cov = "^2.11.1"
 pyupgrade = "^2.31.1"
 pydantic = {extras = ["dotenv"], version = "^1.8.2"}
+ruff = "^0.0.231"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
