--- a/darkmoon/TEMPLATE.env
+++ b/darkmoon/TEMPLATE.env
@@ -2,15 +2,15 @@
 # DATABASE #
 ############
 
-DATABASE_NAME = "compass"
-DATABASE_URL = "mongodb://10.0.8.11:27017/"
-DATABASE_USERNAME = "mango"
-DATABASE_PASSWORD = "p@$$w0rd"
-IP_ADDRESS = "11.0.4.10"
+DATABASE_NAME = "rainbow"
+DATABASE_URL = "mongodb://134.7.3.86:82671/"
+DATABASE_USERNAME = "username"
+DATABASE_PASSWORD = "12345678910"
+IP_ADDRESS = "34.7.3.86"
 
 
 ############
 # FAST API #
 ############
 
-APP_NAME = "Fast API"
+APP_NAME = "APP"
