--- a/darkmoon/Dockerfile
+++ b/darkmoon/Dockerfile
@@ -11,8 +11,6 @@ ENV PYTHONUNBUFFERED=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=on \
     PIP_DEFAULT_TIMEOUT=100
 
-USER vscode
-
 FROM darkmoon-base AS darkmoon-builder
 RUN apt-get update && \
     apt-get install -y --no-install-recommends gcc libffi-dev g++ libxml2-dev libxslt-dev python3-dev && \
@@ -28,4 +26,4 @@ FROM darkmoon-base AS runner
 COPY --from=darkmoon-builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
 ENV PRODUCTION=true \
     STATIC_PATH=/opt/app/
-CMD ["python", "-m", "uvicorn", "darkmoon.main:app", "--host=0.0.0.0", "--port=8000", "--reload"]
+CMD ["python", "-m", "uvicorn", "darkmoon.app:app", "--host=0.0.0.0", "--port=8000", "--reload"]
