refactor: updated TEMPLATE.env to properly reflect actual .env files, replaced os.getenv with Pydantic BaseSetting in settings.py

--- a/server/TEMPLATE.env
+++ b/server/TEMPLATE.env
@@ -2,10 +2,10 @@
 # DATABASE #
 ############
 
-DATABASE_NAME = "rainbow"
-DATABASE_URL = "mongodb://134.7.3.86:82671/"
+SCHEME = "mongodb"
 DATABASE_USERNAME = "username"
 DATABASE_PASSWORD = "12345678910"
+PORT = "1802"
 IP_ADDRESS = "34.7.3.86"
 
 
