refactor: updated TEMPLATE.env to properly reflect actual .env files, replaced os.getenv with Pydantic BaseSetting in settings.py

--- a/server/TEMPLATE.env
+++ b/server/TEMPLATE.env
@@ -3,9 +3,9 @@
 ############
 
 SCHEME = "mongodb"
-DATABASE_USERNAME = "username"
-DATABASE_PASSWORD = "12345678910"
-PORT = "1802"
+USERNAME = "username"
+PASSWORD = "12345678910"
+PORT = "27017"
 IP_ADDRESS = "34.7.3.86"
 
 
