--- a/server/TEMPLATE.env
+++ b/server/TEMPLATE.env
@@ -5,8 +5,8 @@
 SCHEME = "mongodb"
 USERNAME = "username"
 PASSWORD = "12345678910"
-PORT = "27017"
-IP_ADDRESS = "34.7.3.86"
+PORT = 27017
+IP_ADDRESS = 34.7.3.86
 
 
 ############
