chore: changed PASSWORD from str to SecretStr. Removed unneccessary code

--- a/server/TEMPLATE.env
+++ b/server/TEMPLATE.env
@@ -6,7 +6,7 @@ SCHEME = "mongodb"
 USERNAME = "username"
 PASSWORD = "12345678910"
 PORT = 27017
-IP_ADDRESS = 34.7.3.86
+IPv4 = 34.7.3.86
 
 
 ############
