refactor: changed MongoDB string to MongoDSN. Updated docker-compose.yml so that it accesses Mongo link from .env. Updated position of .env and TEMPLATE.env. Updated .gitignore to ignore .env. Updated settings

--- a/TEMPLATE.env
+++ b/TEMPLATE.env
@@ -2,11 +2,7 @@
 # DATABASE #
 ############
 
-SCHEME = "mongodb"
-USERNAME = "username"
-PASSWORD = "12345678910"
-PORT = 27017
-IPv4 = 34.7.3.86
+MONGODB_URL="mongodb://USERNAME:PASSWORD@IPv4:PORT/?authMechanism=DEFAULT"
 
 
 ############
