chore: updated TEMPLATE.env values

--- a/TEMPLATE.env
+++ b/TEMPLATE.env
@@ -2,7 +2,7 @@
 # DATABASE #
 ############
 
-MONGODB_URL="mongodb://USERNAME:PASSWORD@IPv4:PORT/?authMechanism=DEFAULT"
+MONGODB_URL="mongodb://darkmoon:password@localhost:27017/?authMechanism=DEFAULT"
 
 
 ############
