--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-# Copyright (C) 2022 Obscurity Labs LLC. <admin@obscuritylabs.com> - All Rights Reserved
+# Copyright (C) 2023 Obscurity Labs LLC. <admin@obscuritylabs.com> - All Rights Reserved
 # Unauthorized copying of this file, via any medium is strictly prohibited.
 # All rights reserved. No warranty, explicit or implicit, provided.
 # Proprietary and confidential.
@@ -16,7 +16,7 @@ services:
       - 8000:8000
     environment:
       - MONGO_HOST=mongodb
-      - MONGODB_CONNECTION_STRING=${MONGODB_URL}
+      - MONGODB_CONN=${MONGODB_URL}
     volumes:
       - type: bind
         source: ./server
