--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,11 @@
-# Copyright (C) 2022 Obscurity Labs LLC. <admin@obscuritylabs.com> - All Rights Reserved
-# Unauthorized copying of this file, via any medium is strictly prohibited.
-# All rights reserved. No warranty, explicit or implicit, provided.
-# Proprietary and confidential.
+#Cache
+.mypy_cache/
+.ruff_cache/
+.pytest_cache/
+__pycache__/
+*.DS_Store
 
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
 
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Tooling
-.python-version
-.vscode/configurationCache.log
-.vscode/dryrun.log
-.vscode/targets.log
-
-# Environments
+#Environment
 .env
+.venv/
