fix: codeowners file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,4 +10,4 @@
 
 # You can add other lines here to auto-assign reviewers
 
-\* @DoodlePooge @tclasen @RicoViking9000
+* @DoodlePooge @tclasen @RicoViking9000
