--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,7 +10,6 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-json
-        exclude: .devcontainer/devcontainer.json
       - id: check-yaml
       - id: check-toml
       - id: check-added-large-files
@@ -29,20 +28,22 @@ repos:
       - id: black
         args: ["-t", "py310"]
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.961
-    hooks:
-      - id: mypy
-        additional_dependencies:
-          - types-requests
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v2.34.0
-    hooks:
-      - id: pyupgrade
-
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v2.27.1
     hooks:
       - id: commitizen
         stages: [commit-msg]
+
+  - repo: local
+    hooks:
+      - id: mypy
+        name: mypy
+        entry: poetry run mypy .
+        pass_filenames: false
+        language: system
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.2.2
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
