--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,34 +10,33 @@ darkmoon = "darkmoon.main:cli_app"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = {version = "^0.95.0", extras = ["all"]}
+fastapi = "^0.95.0"
 typer = {version = "^0.4.1", extras = ["all"]}
 types-requests = "^2.27.13"
-future = "^0.18.2"
 python-magic = "^0.4.27"
 requests = "^2.31.0"
 motor = "^3.0.0"
 httpx = "^0.24.1"
-uvicorn = "^0.22.0"
-pydantic = { extras = ["dotenv"], version = "^1.10.2" }
+pydantic = "1.10.9"
 pefile = "^2023.2.7"
+uvicorn = {extras = ["standard"], version = "^0.22.0"}
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.6.0"
-commitizen = "^2.20.4"
+black = "22.8.0"
+commitizen = "2.27.1"
 mkdocs = "^1.2.3"
 mkdocs-awesome-pages-plugin = "^2.7.0"
 mkdocs-material = "^8.2.5"
 mkdocs-minify-plugin = "^0.5.0"
 mkdocstrings = "^0.18.1"
-mypy = "^0.982"
+mypy = "0.982"
 pre-commit = "^2.17.0"
 pytest = "^7.1.2"
 pytest-cov = "^2.11.1"
 pytest-asyncio = "^0.21.0"
-pyupgrade = "^2.31.1"
-ruff = "^0.0.231"
+ruff = "0.0.239"
 motor-types = "^1.0.0b2"
+pydantic = { extras = ["dotenv"], version = "1.10.9" }
 
 [build-system]
 requires = ["poetry-core"]
@@ -127,7 +126,6 @@ ignore = [
   "D301",
   "S106",
   "S113",
-  "S324",
   "ERA001",
 ]
 exclude = [
