--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,13 @@ python = "^3.10"
 fastapi = "^0.95.0"
 typer = {version = "^0.4.1", extras = ["all"]}
 types-requests = "^2.27.13"
-python-magic = "^0.4.27"
 requests = "^2.31.0"
 motor = "^3.0.0"
 httpx = "^0.24.1"
 pydantic = "1.10.9"
 pefile = "^2023.2.7"
 uvicorn = {extras = ["standard"], version = "^0.22.0"}
+python-magic = "^0.4.27"
 
 [tool.poetry.group.dev.dependencies]
 black = "22.8.0"
@@ -34,9 +34,10 @@ mypy = "0.982"
 pre-commit = "^2.17.0"
 pytest = "^7.1.2"
 pytest-cov = "^2.11.1"
-pytest-asyncio = "^0.21.0"
 ruff = "0.0.239"
 motor-types = "^1.0.0b2"
+asgi-lifespan = "^2.1.0"
+pytest-asyncio = "^0.21.0"
 
 [build-system]
 requires = ["poetry-core"]
