--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ ruff = "0.0.239"
 motor-types = "^1.0.0b2"
 asgi-lifespan = "^2.1.0"
 pytest-asyncio = "^0.21.0"
+faker = "^18.11.2"
 
 [build-system]
 requires = ["poetry-core"]
