--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,15 +21,11 @@ pydantic = "1.10.9"
 pefile = "^2023.2.7"
 uvicorn = {extras = ["standard"], version = "^0.22.0"}
 python-magic = "^0.4.27"
+beanie = "^1.19.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "22.8.0"
 commitizen = "2.27.1"
-mkdocs = "^1.2.3"
-mkdocs-awesome-pages-plugin = "^2.7.0"
-mkdocs-material = "^8.2.5"
-mkdocs-minify-plugin = "^0.5.0"
-mkdocstrings = "^0.18.1"
 mypy = "0.982"
 pre-commit = "^2.17.0"
 pytest = "^7.1.2"
@@ -117,7 +113,7 @@ include = '\.pyi?$'
 target_versions = ['py310']
 
 [tool.ruff]
-select = ["E", "F", "S", "B", "COM", "D", "C4", "ERA", "DTZ", "I"]
+select = ["E", "F", "S", "B", "COM", "D", "C4", "ERA", "DTZ", "I", "UP"]
 ignore = [
   "B008",
   "B904",
