--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,4 @@
-# Copyright (C) 2022 Obscurity Labs LLC. <admin@obscuritylabs.com> - All Rights Reserved
-# Unauthorized copying of this file, via any medium is strictly prohibited.
-# All rights reserved. No warranty, explicit or implicit, provided.
-# Proprietary and confidential.
+
 default_stages: [commit, manual]
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -10,22 +7,11 @@ repos:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-json
-        exclude: .devcontainer/devcontainer.json
       - id: check-yaml
       - id: check-toml
       - id: check-added-large-files
       - id: check-case-conflict
       - id: check-merge-conflict
-
-  # For when we add a frontend
-  # - repo: https://github.com/pre-commit/mirrors-prettier
-  #   rev: v3.0.0-alpha.0
-  #   hooks:
-  #     - id: prettier
-  #       name: prettier
-  #       types_or: [ts, tsx, javascript, jsx, json]
-  #       args:
-  #         [--config, frontend/.prettierrc, --ignore-path, frontend/.gitignore]
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: "v0.0.239"
@@ -39,20 +25,22 @@ repos:
       - id: black
         args: ["-t", "py310"]
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.961
-    hooks:
-      - id: mypy
-        additional_dependencies:
-          - types-requests
-
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v2.34.0
-    hooks:
-      - id: pyupgrade
-
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v2.27.1
     hooks:
       - id: commitizen
         stages: [commit-msg]
+
+  - repo: local
+    hooks:
+      - id: mypy
+        name: mypy
+        entry: poetry run mypy .
+        pass_filenames: false
+        language: system
+
+  - repo: https://github.com/python-poetry/poetry
+    rev: 1.2.2
+    hooks:
+      - id: poetry-check
+      - id: poetry-lock
