--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-addopts = "-q"
+addopts = "-q --cov=darkmoon"
 filterwarnings = [
   "ignore::DeprecationWarning",
   "ignore::RuntimeWarning",
@@ -49,12 +49,6 @@ filterwarnings = [
 markers = [
   "unit",
   "integration",
-]
-testpaths = [
-  "tests",
-]
-pythonpath = [
-  ".",
 ]
 
 [tool.coverage.run]
@@ -68,7 +62,6 @@ exclude_lines = [
   "pragma: no cover",
   "if __name__ == .__main__.:",
 ]
-fail_under = 60
 show_missing = true
 skip_covered = true
 
