chore: add placeholder test to prevent pytest from returning status code 5

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+Pipfile
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,node,macos,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,node,macos,visualstudiocode
 
