--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,16 @@ darkmoon = "darkmoon.cli.main:app"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.95.0"
-typer = {version = "^0.4.1", extras = ["all"]}
 types-requests = "^2.27.13"
 requests = "^2.31.0"
 motor = "^3.0.0"
 httpx = "^0.24.1"
 pydantic = "1.10.9"
 pefile = "^2023.2.7"
-uvicorn = {extras = ["standard"], version = "^0.22.0"}
+uvicorn = { extras = ["standard"], version = "^0.22.0" }
 python-magic = "^0.4.27"
 beanie = "^1.19.2"
+typer = { extras = ["all"], version = "^0.9.0" }
 
 [tool.poetry.group.dev.dependencies]
 black = "22.8.0"
@@ -42,26 +42,15 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 addopts = "-q --cov=darkmoon"
-filterwarnings = [
-  "ignore::DeprecationWarning",
-  "ignore::RuntimeWarning",
-]
-markers = [
-  "unit",
-  "integration",
-]
+filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
+markers = ["unit", "integration"]
 
 [tool.coverage.run]
 branch = true
-omit = [
-  "**/tests/**",
-]
+omit = ["**/tests/**"]
 
 [tool.coverage.report]
-exclude_lines = [
-  "pragma: no cover",
-  "if __name__ == .__main__.:",
-]
+exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
 show_missing = true
 skip_covered = true
 
@@ -71,9 +60,7 @@ ignore_missing_imports = true
 no_warn_unused_ignores = true
 strict = true
 strict_optional = false
-plugins = [
-  "pydantic.mypy"
-]
+plugins = ["pydantic.mypy"]
 
 [tool.pydantic-mypy]
 init_forbid_extra = true
