refactor: get-metadata to allow a paths

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
       "source.fixAll": true
     }
   },
-  "ruff.args": ["--unfixable=F401"],
+  "ruff.args": [
+    "--unfixable=F401,T20"
+  ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "cSpell.words": [
@@ -18,5 +20,4 @@
     "pefile",
     "typer"
   ]
-
 }
