chore: set minimum code coverage to exactly current amount

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ branch = true
 omit = ["**/tests/**"]
 
 [tool.coverage.report]
+fail_under = 59
 exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
 show_missing = true
 skip_covered = true
