12 write unit tests for the cli app (#41)
* fix: cli entrypoint startup

* chore: spellcheck for typer

* chore: remove auto remove import statements on save

* chore: update typer to modern version

* chore: forbid print in production code

* refactor: get-metadata to allow a paths

* fix: remote unit marker from pytest

* feat: refactor all non-typer components into another file

* feat: test coverage for all cli commands that dont require a running server

* chore: set minimum code coverage to exactly current amount

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,11 +10,14 @@
       "source.fixAll": true
     }
   },
+  "ruff.args": [
+    "--unfixable=F401,T20"
+  ],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "cSpell.words": [
     "anyio",
-    "pefile"
+    "pefile",
+    "typer"
   ]
-
 }
