feat: Jinja connected to fastAPI, added 'darkmoon', 'fastapi', and 'templating' to the workspace dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,10 @@
   "python.testing.pytestEnabled": true,
   "cSpell.words": [
     "anyio",
+    "darkmoon",
+    "fastapi",
     "pefile",
+    "templating",
     "typer"
   ]
 }
