feat: updates the docstring for views.py.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,12 @@
   "python.testing.pytestEnabled": true,
   "cSpell.words": [
     "anyio",
+    "bson",
+    "fastapi",
     "pefile",
+    "Pydantic",
+    "pymongo",
+    "templating",
     "typer"
   ]
 }
