--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,7 +17,9 @@
   "python.testing.pytestEnabled": true,
   "cSpell.words": [
     "anyio",
+    "fastapi",
     "pefile",
+    "templating",
     "typer"
   ]
 }
