--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,7 +47,7 @@ jobs:
       - run: poetry install --no-interaction
 
       - name: Pre-commit hooks
-        run: poetry run pre-commit run --all-files
+        run: SKIP=poetry-lock poetry run pre-commit run --all-files
 
       - name: Pytest testing
         run: poetry run pytest
