fix: update command for schemathesis testing in the ci pipeline

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,4 +54,4 @@ jobs:
 
       - name: Schemathesis testing
         continue-on-error: true
-        run: poetry run pytest -k 'test_api'
+        run: poetry run pytest -k 'test_api_schema'
