--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ uvicorn = { extras = ["standard"], version = "^0.22.0" }
 python-magic = "^0.4.27"
 beanie = "^1.19.2"
 typer = { extras = ["all"], version = "^0.9.0" }
+schemathesis = "^3.19.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "22.8.0"
@@ -35,13 +36,15 @@ motor-types = "^1.0.0b2"
 asgi-lifespan = "^2.1.0"
 pytest-asyncio = "^0.21.0"
 faker = "^18.11.2"
+testcontainers = "^3.7.1"
+schemathesis = "^3.19.5"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
-addopts = "-q --cov=darkmoon"
+addopts = "-q --cov=darkmoon --no-cov-on-fail"
 filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
 markers = ["unit", "integration"]
 
