--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ python-magic = "^0.4.27"
 beanie = "^1.19.2"
 typer = { extras = ["all"], version = "^0.9.0" }
 jinja2 = "^3.1.2"
+pytest = "^7.4.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "22.12.0"
