--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ beanie = "^1.19.2"
 typer = { extras = ["all"], version = "^0.9.0" }
 jinja2 = "^3.1.2"
 pytest = "^7.4.0"
+python-multipart = "^0.0.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.7.0"
