--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ beanie = "^1.19.2"
 typer = { extras = ["all"], version = "^0.9.0" }
 jinja2 = "^3.1.2"
 pytest = "^7.4.0"
+pip = "^23.2.1"
+install = "^1.3.5"
+flask = "^2.3.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.7.0"
