--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ pytest = "^7.4.0"
 pip = "^23.2.1"
 install = "^1.3.5"
 flask = "^2.3.2"
+python-multipart = "^0.0.6"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.7.0"
