--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,12 +19,20 @@
   "cSpell.words": [
     "anyio",
     "bson",
+    "darkmoon",
     "fastapi",
+    "htmx",
     "pefile",
     "Pydantic",
     "pymongo",
+    "schemathesis",
     "templating",
     "tmpdirname",
     "typer"
+  ],
+  "xd.globalEditor": true,
+  "xd.lastPackage": "/Users/intern/Downloads/material-theme",
+  "python.analysis.extraPaths": [
+    "./darkmoon"
   ]
 }
