--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ jinja2 = "^3.1.2"
 pytest = "^7.4.0"
 python-multipart = "^0.0.6"
 python-magic = "^0.4.27"
+aiohttp = "^3.8.5"
 
 [tool.poetry.group.dev.dependencies]
 black = "23.7.0"
